<resources>
    <string name="app_name">Clocker</string>
    <string name="tasks">Tasks</string>
    <string name="events">Events</string>
    <string name="alarm">Alarm</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="timer">Timer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zeros">00:00:00</string>
    <string name="date">THU, FEB 10</string>
    <string name="FAPTooltip">Add task</string>
    <string name="add_title_hint">Title</string>
    <string name="add_note_hint">Add note...</string>
    <string name="sw">00:00:00</string>
    <string name="ms">00</string>


</resources>